<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_no"/>
    <Button
        android:id="@+id/myButtonAddition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_addition"
        android:onClick="AdditionButtonClick"/>
    <Button
        android:id="@+id/myButtonSubtraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_subtraction"
        android:onClick="SubtractionButtonClick"/>
    <Button
        android:id="@+id/myButtonDivision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_division"
        android:onClick="DivisionButtonClick"/>
    <Button
        android:id="@+id/myButtonMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        android:onClick="MultiplyButtonClick"/>

</LinearLayout>